--- a/package.json
+++ b/package.json
@@ -8,6 +8,13 @@
     "dev": "nodemon src/index.js",
     "test": "jest"
   },
+  "dependencies": {
+    "express": "^4.18.2",
+    "dotenv": "^16.3.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
+  },
   "author": "SecurePath UK",
   "license": "UNLICENSED",
   "private": true
