--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,62 @@
-﻿# Application
-NODE_ENV=development
+﻿# SecurePath UK Environment Variables Template
+# Copy this to .env and fill in actual values
+# NEVER commit .env file - only .env.example
+
+# === Application Settings ===
+NODE_ENV=production
+APP_NAME=SecurePath_UK
+APP_URL=https://securepath-uk.onrender.com
 PORT=3000
-APP_NAME=SecurePathUK
+HOST=0.0.0.0
 
-# Database
-DB_HOST=localhost
-DB_PORT=5432
-DB_NAME=securepathuk
-DB_USER=securepath_user
-DB_PASSWORD=
+# === Security Settings ===
+# Generate with: openssl rand -base64 32
+SESSION_SECRET=CHANGE_THIS_TO_RANDOM_32_CHAR_STRING
+JWT_SECRET=CHANGE_THIS_TO_RANDOM_32_CHAR_STRING
+ENCRYPTION_KEY=CHANGE_THIS_TO_RANDOM_32_CHAR_STRING
 
-# Security
-JWT_SECRET=
-SESSION_SECRET=
+# === Session Configuration ===
+SESSION_NAME=securepath_session
+SESSION_MAX_AGE=3600000
+SESSION_SECURE=true
+SESSION_HTTP_ONLY=true
+SESSION_SAME_SITE=strict
+
+# === Security Headers ===
+HSTS_MAX_AGE=31536000
+CSP_REPORT_URI=
+FRAME_OPTIONS=DENY
+XSS_PROTECTION=1; mode=block
+CONTENT_TYPE_OPTIONS=nosniff
+REFERRER_POLICY=strict-origin-when-cross-origin
+
+# === Database (Future) ===
+DATABASE_URL=
+DATABASE_SSL=true
+
+# === Email Configuration (Future) ===
+SMTP_HOST=
+SMTP_PORT=587
+SMTP_SECURE=true
+SMTP_USER=
+SMTP_PASS=
+
+# === API Keys (Future) ===
+# NEVER hardcode actual keys
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+STRIPE_SECRET_KEY=
+STRIPE_WEBHOOK_SECRET=
+
+# === Monitoring ===
+LOG_LEVEL=info
+ENABLE_METRICS=true
+SENTRY_DSN=
+
+# === Rate Limiting ===
+RATE_LIMIT_WINDOW_MS=900000
+RATE_LIMIT_MAX_REQUESTS=100
+
+# === CORS Settings ===
+CORS_ORIGIN=https://securepath-uk.com
+CORS_CREDENTIALS=true
