Implement comprehensive application security hardening

--- a/package.json
+++ b/package.json
@@ -1,21 +1,31 @@
 ﻿{
-  "name": "securepath-uk",
-  "version": "0.1.0",
-  "description": "AI-Enhanced ISO 27001 Consultancy Platform",
-  "main": "src/index.js",
-  "scripts": {
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js",
-    "test": "jest"
-  },
-  "dependencies": {
-    "express": "^4.18.2",
-    "dotenv": "^16.3.1"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.1"
-  },
-  "author": "SecurePath UK",
-  "license": "UNLICENSED",
-  "private": true
+    "name":  "securepath-uk",
+    "version":  "0.1.0",
+    "description":  "AI-Enhanced ISO 27001 Consultancy Platform",
+    "main":  "src/index.js",
+    "scripts":  {
+                    "start":  "node src/index.js",
+                    "dev":  "nodemon src/index.js",
+                    "test":  "jest",
+                    "security:check":  "node scripts/validate-secrets.js",
+                    "start:secure":  "NODE_ENV=production node src/index.js"
+                },
+    "dependencies":  {
+                         "bcryptjs":  "^3.0.2",
+                         "cors":  "^2.8.5",
+                         "dotenv":  "^16.3.1",
+                         "express":  "^4.18.2",
+                         "express-mongo-sanitize":  "^2.2.0",
+                         "express-rate-limit":  "^8.0.1",
+                         "express-validator":  "^7.2.1",
+                         "helmet":  "^8.1.0",
+                         "hpp":  "^0.2.3",
+                         "xss":  "^1.0.15"
+                     },
+    "devDependencies":  {
+                            "nodemon":  "^3.0.1"
+                        },
+    "author":  "SecurePath UK",
+    "license":  "UNLICENSED",
+    "private":  true
 }
